# subzero-node

./: .dockerignore  Cargo.toml  Dockerfile  subzeroSpec-0.0.2.json
chains/: zero-network.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/subzero-core/: Cargo.toml
pallets/subzero-core/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
