[package]
authors = ['marco@one.io']
description = 'subzero core frame pallet'
edition = '2018'
homepage = 'https://zero.io'
license = 'Unlicense'
name = 'subzero-core'
repository = 'https://github.com/playzero/suzbero-core'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
