[package]
authors = ['marco@one.io']
description = 'subzero core frame pallet'
edition = '2018'
homepage = 'https://zero.io'
license = 'Unlicense'
name = 'subzero-core'
repository = 'https://github.com/playzero/pallet-subzero-core'
version = '0.0.1'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
